Fixed Service Area Alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ hr.solid {
 
 /* Serivce Area  */
 .support {
-  margin: 25px 0 0;
+  margin: 25px auto auto;
   box-shadow: 0px 0px 18px #0000003b;
 }
 
